# cross-fund-holdings-traction

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  april_traction.html  june_traction.html  may_traction.html  pyproject.toml  traction.html
.github/workflows/: monthly-report.yml
config/: name_to_nse.csv  name_to_nse.csv.example  nse_manual_overrides.csv  rupeevest_funds.example.txt
data/: april_insights.json  april_traction.json  june_insights.json  june_traction.json  may_insights.json  may_traction.json  watchlist.json
docs/: backtest-apr-may-june-2026.md
scripts/: build_name_to_nse.py  download_rupeevest_funds.py  embed_report_ui.py  manage_watchlist.py  top100_backtest.py
src/mf_screener/: __init__.py  __main__.py  aggregate.py  cli.py  load.py  metrics.py  month_run.py  pipeline.py  prices.py  report_csv.py  report_html.py  report_month.py  symbol_map.py
src/mf_screener/ingest/: __init__.py  rupeevest.py
src/mf_screener/insights/: __init__.py  __main__.py  evidence.py  gemini.py  rules.py  verify.py
src/mf_screener/reporting/: __init__.py  activity.py  filters.py  format.py  json_report.py  layout.py  payload.py  (+5 more)
tests/: conftest.py  test_aggregate_direction.py  test_composite_score.py  test_filter_for_report.py  test_format_prices.py  test_fund_csv_activity.py  test_html_payload_golden.py  test_insights.py  test_layout.py  test_normalize_and_stock_key.py  test_persistence.py  test_pipeline_mini.py  test_prices.py  test_report_month.py  test_reporting_activity.py  test_rupeevest_ingest.py  test_symbol_map_dedupe.py  test_watchlist_merge.py
(+5 files in other folders)
