[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mf-screener"
version = "0.1.0"
description = "Mutual fund holdings traction screener (RupeeVest / Trendlyne CSV exports)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.package-data]
mf_screener = ["templates/*"]

[project.scripts]
mf-screener = "mf_screener.cli:main"
mf-screener-month = "mf_screener.month_run:main"

[tool.setuptools.packages.find]
where = ["src"]
